--- a/gradle.properties
+++ b/gradle.properties
@@ -1,1 +1,1 @@
-ideaSDKlocalPath=/Users/damon/develop/ideaSDK/IntelliJ IDEA IU-173.3942.27.app
+ideaSDKlocalPath=C:\\Program Files\\JetBrains\\IntelliJ IDEA 2018.1.4
